<resources>
    <string name="app_name">Virtual Treasure Hunting</string>
    <string name="test">test</string>
    <string name="title_activity_maps">Map</string>
    <string name="follow">Follow</string>
    <string name="game">New Game</string>
    <string name="menu_context">Menu button</string>
    <string name="back_context">Back button</string>
    <string name="info_context">Information button</string>
    <string name="setup_title">New Game Setup</string>
    <string name="setup_caches">Number of treasures placed on map:</string>
    <string name="setup_distance">Max distance between you and treasures:</string>
    <string name="setup_gamemode">Choose a gamemode:</string>
    <string name="setup_timelimit">Choose a time limit:</string>
    <string name="default_distance">500m</string>
    <string name="start_game">Start Game</string>
    <string name="standard">Standard</string>
    <string name="timetrial">Time trial</string>
    <string name="nav_main_title">Game Map</string>
    <string name="nav_games_title">Previous Games</string>
    <string name="nav_settings_title">Settings</string>
    <string name="tap_action_content">Tap the screen to advance</string>
    <string name="minigame_countdown">5</string>
    <string name="actions_completed">0/3</string>

    <!-- InfoActivity -->
    <string name="info_how_to_play_title">How To Play</string>
    <string name="info_how_to_play_1">Press the New Game button to start a new game. When setting up a new game you get to choose how many treasures you want to collect. The treasures will be randomly placed on the map. You will however get to choose the furthest distance from your current position they will be placed. The Time trial gamemode lets you pick a time limit for the game to be completed.</string>
    <string name="info_how_to_play_2">When the treasures have been placed your objective is to physically walk to them and when close press their icons on the map. This will take you to a minigame which when completed will open the treasure. When all treasures have been opened the game is completed.</string>
    <string name="info_minigame_title">Minigame</string>
    <string name="info_minigame_paragraph_1">In order to open a treasure you have to \"break its lock\", this is done by completing the minigame. In order to complete the minigame you have to do three tasks, the tasks will be shown on you\'re screen one at a time and you have to complete each task in five seconds. There are four different tasks:</string>
    <string name="info_minigame_task_shake"><u>Shake:</u> Shake you\'re phone until the progressbar is filled. The harder you shake the faster it completes.</string>
    <string name="info_minigame_task_dark"><u>Make it dark:</u> Cover you\'re phone\'s light sensor in order to make it dark. If you\'re in daylight you will most likely have to cover it completely however if you\'re already in a not so bright environment slightly covering it with your hand works.</string>
    <string name="info_minigame_task_jump"><u>Jump:</u> Physically jump while holding your phone, no cheating! ;)</string>
    <string name="info_minigame_task_tap"><u>Tap:</u> Tap the screen until the progress bar is filled.</string>
    <string name="info_assist_title">Out of reach treasures</string>
    <string name="info_assist_paragraph_1">Since the treasures are placed randomly they will sometimes be out of reach. If this happens press the flag button in the top right and then the out of reach treasure on the map. This will remove the treasure and generate a new one.</string>
    <string name="info_data_usage_title">Usage of personal data</string>
    <string name="info_data_usage_paragraph">This application uses location services. The data collected are only used for internal app processes and never shared with anyone. The location services are also only used when the app is running. Permissions to this can be turned off from your phones settings application. Your phones accelerometer and light sensor are also used for internal processes during the minigame (detection of shake, jump and brightness). </string>
    <string name="feedback">Send feedback (email)</string>
    <string name="feedback_paragraph">Wishes for features/improvements and bug reports are appreciated.</string>

</resources>
