<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <ImageButton
                android:id="@+id/infobutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:contentDescription="@string/info_context"
                app:srcCompat="@mipmap/actionbar_info_foreground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <ImageButton
                android:id="@+id/assistbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu_context"
                app:srcCompat="@mipmap/actionbar_assistbutton_foreground" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>